<resources>
    <string name="app_name">YourBeauty</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <!--My orders panel-->
    <string name="wait_my_orders">Please wait for list of your orders</string>

    <!-- Side Menu and Toast message -->
    <string name="menu_home">Home</string>
    <string name="menu_signin">Sign In</string>
    <string name="menu_signup">Sign Up</string>

    <string name="menu_logout">Log Out</string>
    <string name="my_profile">My Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="my_city">My City</string>

    <string name="click_back">Please click BACK again to close app</string>

    <!-- OrderZone -->
    <string name="no_workers">No workers available</string>
    <string name="wait_workers">Please wait for list all workers…</string>


    <!-- Menu -->
    <string name="no_barbers">No barbers found in the database</string>
    <string name="no_beauticians">No beauticians found in the database</string>
    <string name="no_dietetics">No dietitians found in the database</string>
    <string name="no_hairdressers">No hairdressers found in the database</string>
    <string name="no_medic">No medics found in the database</string>
    <string name="no_manicurists">No manicurists found in the database</string>

    <!-- HomeFragment -->
    <string name="welcome">Welcome to the beauty area. \n Find the service you are looking for.</string>
    <string name="hairdressers">Hairdressers</string>
    <string name="barbers">Barbers</string>
    <string name="beauticians">Beauticians</string>
    <string name="aesthetic_medicine">Medicine</string>
    <string name="manicure" translatable="false">Manicure</string>
    <string name="dietetics">Dietetics</string>
    <string name="wait">Please wait…</string>

    <!-- ServicesFragment -->
    <string name="no_services">No services found in database</string>
    <string name="sign_in_first">You have to sign in first!</string>
    <string name="price"> Price: </string>
    <string name="time"> Time: </string>
    <string name="wait_services">Please wait for list of all services…</string>

    <!-- SignInFragment -->
    <string name="wait_sign_in">Please wait for sign in…</string>
    <string name="bad_mail_pass">Bad e-mail or password!</string>

    <!-- SignUpFragment -->
    <string name="wait_sign_up">Please wait for sign up…</string>
    <string name="user_added">User Added</string>
    <string name="some_error">Some error occurred while adding new user</string>

    <!-- Hours Fragment -->
    <string name="wait_hours">Please wait for list all available hours…</string>
    <string name="no_hours">No hours available</string>

    <!-- My Profile Fragment -->
    <string name="wait_profile">Please wait for list user data…</string>

    <!--Make Order Fragment -->
    <string name="wait_make">Please wait for make an order…</string>
    <string name="order_error">Error in ordering visit \n Please go back and verify your order</string>
    <string name="thank_order">Visit ordered. \n Thank you for making an order using YourBeauty!</string>
    <string name="back_home">Back to Home Page</string>

    <!-- LAYOUTS -->
    <string name="barber_frag">Barbers:</string>
    <string name="beauty_frag">Beauticians:</string>
    <string name="diet_frag">Dietetics:</string>
    <string name="hair_frag">Hairdressers:</string>
    <string name="medicine_frag">Medics:</string>
    <string name="nails_frag">Manicurists:</string>

    <!-- OrderZone Layout -->
    <string name="select_date">Select date of visit:</string>
    <string name="select_worker">Select worker:</string>
    <string name="next_button">NEXT</string>

    <!-- Services Layout -->
    <string name="services">Services:</string>

    <!-- Sign In Layout -->
    <string name="signin">Sign In</string>
    <string name="sign_in_mail" translatable="false">E-Mail: </string>
    <string name="sign_in_pass">Password: </string>

    <!-- Sign Up Layout -->
    <string name="signup">Sign Up</string>
    <string name="signup_name">Name: </string>
    <string name="signup_second_name">Second Name: </string>
    <string name="signup_surname">Surname: </string>
    <string name="signup_birth">Date Of Birth: </string>
    <string name="signup_gender">Choose Gender: </string>
    <string name="signup_mail" translatable="false">E-Mail: </string>
    <string name="signup_pass">Password: </string>
    <string name="signup_account">Account Number: </string>
    <string name="gender_man">Man</string>
    <string name="gender_woman">Woman</string>

    <!-- Hours Layout -->
    <string name="hours">Available Hours: </string>

    <!-- Summary Layout -->
    <string name="summary">Order summary: </string>
    <string name="btn_without_pay">Order without pay in advance</string>
    <string name="btn_with_pay">Order with pay in advance</string>

    <!-- My Profile Layout -->
    <string name="profile">My Profile: </string>
    <string name="userName">Name: </string>
    <string name="userName2">Second Name: </string>
    <string name="userSurname">Surname: </string>
    <string name="userMail" translatable="false">E-Mail: </string>
    <string name="userCity">City: </string>

    <!-- My Orders Layout -->
    <string name="orders">My Orders:</string>

</resources>