<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
    </group>

    <item
        android:id="@+id/nav_my_profile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_user"/>

    <item
        android:id="@+id/nav_my_orders"
        android:title="@string/my_orders"
        android:icon="@drawable/ic_orders"/>

    <item
        android:id="@+id/nav_my_city"
        android:title="@string/my_city"
        android:icon="@drawable/ic_city"
        />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_logout" />

</menu>