<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.yourbeauty.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_signin"
        android:name="com.example.yourbeauty.ui.SignIn.SignInFragment"
        android:label="@string/menu_signin"
        tools:layout="@layout/fragment_signin" />

    <fragment
        android:id="@+id/nav_signup"
        android:name="com.example.yourbeauty.ui.SignUp.SignUpFragment"
        android:label="@string/menu_signup"
        tools:layout="@layout/fragment_signup" />

</navigation>