<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/fragment_summary"
    android:background="@color/colorPrimaryDark"
    android:clickable="true"
    android:focusable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/oregano"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/summary_linear">

            </LinearLayout>

            <Button
                android:padding="8dp"
                android:id="@+id/btn_Without_Pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/gradient_buttons"
                android:text="@string/btn_without_pay"
                android:fontFamily="@font/oregano"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/btn_With_Pay"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/gradient_buttons"
                android:text="@string/btn_with_pay"
                android:fontFamily="@font/oregano"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"/>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>