<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/fragment_my_profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/my_profile_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#212432"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/oregano"
                android:text="@string/my_profile"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"/>

            <TableRow
                android:id="@+id/Row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/profile_title">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/oregano"
                    android:text="@string/userName"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/showName"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:ems="3"
                    android:enabled="false"
                    android:maxLength="50"
                    android:inputType="textMultiLine"
                    android:textColor="#FFFFFF"
                    android:textAlignment="textEnd"
                    tools:ignore="Autofill,LabelFor" />

            </TableRow>

            <TableRow
                android:id="@+id/Row2"
                app:layout_constraintTop_toBottomOf="@+id/Row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userSecondName"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/oregano"
                    android:text="@string/userName2"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/showSecondName"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:textColor="#FFFFFF"
                    android:textAlignment="textEnd"
                    android:maxLength="50"
                    android:ems="5"
                    android:inputType="textMultiLine"
                    android:enabled="false"
                    tools:ignore="Autofill,LabelFor" />

            </TableRow>

            <TableRow
                android:id="@+id/Row3"
                app:layout_constraintTop_toBottomOf="@+id/Row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userSurname"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/oregano"
                    android:text="@string/userSurname"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/showSurname"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:textColor="#FFFFFF"
                    android:textAlignment="textEnd"
                    android:maxLength="50"
                    android:ems="4"
                    android:inputType="textMultiLine"
                    android:enabled="false"
                    tools:ignore="Autofill,LabelFor" />

            </TableRow>

            <TableRow
                android:id="@+id/Row4"
                app:layout_constraintTop_toBottomOf="@+id/Row3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userMail"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/oregano"
                    android:text="@string/userMail"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/showMail"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:textColor="#FFFFFF"
                    android:ems="4"
                    android:maxLength="50"
                    android:inputType="textMultiLine"
                    android:enabled="false"
                    android:textAlignment="textEnd"
                    tools:ignore="Autofill,LabelFor" />

            </TableRow>

            <TableRow
                android:id="@+id/Row5"
                app:layout_constraintTop_toBottomOf="@+id/Row4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="32dp">

                <Button
                    android:id="@+id/profile_edit_password"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:text="Change Password"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#B8ECF8"
                    android:fontFamily="@font/oregano"/>

                <Button
                    android:id="@+id/profile_edit_button"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:text="Edit Profile"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#B8ECF8"
                    android:fontFamily="@font/oregano"/>
            </TableRow>

        </LinearLayout>
    </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>